sample-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: sample.info
    http:
      paths:
      - path: /postalcode-app
        pathType: Prefix
        backend:
          service:
            name: postalcode-app-service
            port:
              number: 1099
      - path: /sample-app
        pathType: Prefix
        backend:
          service:
            name: sample-app-service
            port:
              number: 25123
