user-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-service-ingress
  namespace: user-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: sample.info
    http:
      paths:
      - path: /postalcode-app(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: postalcode-app-service
            port:
              number: 1099
      - path: /user-service(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 25123
